--- a/example/humpi_input_test.cfg
+++ b/example/humpi_input_test.cfg
@@ -70,4 +70,4 @@ output_path="output/"
 #input data file
 #For multiples runs, Use an input_data file following the structure below 
 #input_format, sst_filename,     sst_var,      sst_lat,     sst_lon,   sst_units,  date,     i_terrain_mask,   j_terrain_mask
-input_data="/home/cymateam/HuMPI/test/humpi_input_data_test.txt"
+input_data="humpi_input_data_test.txt"
